--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
             "email": "info@contentcoffee.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "ContentCoffee\\EntitySyncer\\": "src"
+        }
+    }
 }
